# python-tabulate

./: .gitignore  .pre-commit-config.yaml  justfile  pyproject.toml  setup.py  tabulate.py  tox.ini
.github/workflows/: release.yml
tabulate/: __init__.py
test/: test_api.py  test_internal.py  test_output.py  test_regression.py  test_textwrapper.py
